# ccxa

./: .gitignore  README.ja.md  README.md  config.yaml  pyproject.toml
assets/: chime.aiff
src/ccxa/: __init__.py  __main__.py  app.py  config.py  state.py
src/ccxa/audio/: capture.py  noise_gate.py
src/ccxa/llm/: engine.py  prompt.py  tools.py
src/ccxa/search/: web.py
src/ccxa/stt/: transcriber.py
src/ccxa/utils/: text.py
src/ccxa/wakeword/: detector.py
src/ccxsa/: __init__.py  __main__.py  app.py
src/ccxsa/audio/: capture.py  playback.py
src/ccxsa/llm/: engine.py  tools.py
src/ccxsa/tts/: speaker.py
src/ccxsa/utils/: ring_buffer.py
src/ccxsa/vad/: silero.py
tests/: test_is_question.py  test_noise_gate.py  test_ring_buffer.py  test_state.py  test_tools.py  test_wakeword_deny.py
