[project]
name = "ccxa"
version = "0.2.0"
description = "Japanese Voice Chat Assistant for Mac mini M2"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mlx>=0.22",
    "mlx-lm>=0.22",
    "mlx-audio>=0.4",
    "numpy>=1.26",
    "sounddevice>=0.5",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "scipy>=1.12",
    "onnxruntime>=1.17",
    "ddgs>=9.0",
    "huggingface-hub>=0.23",
    "torch>=2.2",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
ccxa = "ccxa.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
